--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "devDependencies": {
     "esbuild": "^0.17.8",
     "itsamatch": "^1.2.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "uuid": "^9.0.0",
+    "@types/uuid": "9.0.1"
   }
 }
