Resolve generic type parameters during type inference

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,9 @@
                 "<node_internals>/**"
             ],
             "program": "${workspaceFolder}/build/poy.js",
+            "args": [
+                "${workspaceFolder}/examples/Generics.poy"
+            ],
             "outFiles": [
                 "${workspaceFolder}/**/*.js"
             ]
