--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "esbuild src/main.ts --bundle --outfile=build/poy.js --platform=node",
-    "watch": "esbuild src/main.ts --bundle --outfile=build/poy.js --platform=node --watch"
+    "watch": "esbuild src/main.ts --bundle --outfile=build/poy.js --platform=node --sourcemap --watch"
   },
   "author": "Nathan Soufflet",
   "license": "MIT",
