--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "build/poy.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "esbuild src/main.ts --bundle --outfile=build/poy.js --platform=node",
@@ -15,9 +16,9 @@
     "url": "https://github.com/nathsou/poy"
   },
   "devDependencies": {
-    "esbuild": "^0.17.8",
+    "esbuild": "^0.17.14",
     "itsamatch": "^1.2.0",
-    "typescript": "^4.9.5",
+    "typescript": "^5.0.2",
     "uuid": "^9.0.0",
     "@types/uuid": "9.0.1"
   }
