--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "esbuild": "^0.17.14",
     "itsamatch": "^1.2.0",
-    "typescript": "^5.0.2",
+    "typescript": "4.9.4",
     "uuid": "^9.0.0",
     "@types/uuid": "9.0.1"
   }
