--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "module": "es2020",
-        "target": "es6",
+        "module": "ES2020",
+        "target": "ES2020",
         "strict": true,
         "esModuleInterop": true,
         "moduleResolution": "node",
