Support #new attributes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "strict": true,
         "esModuleInterop": true,
         "moduleResolution": "node",
+        "noEmit": true,
     },
     "exclude": [
         "node_modules"
