--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,16 +8,10 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
+            "skipFiles": ["<node_internals>/**"],
             "program": "${workspaceFolder}/build/poy.js",
-            "args": [
-                "${workspaceFolder}/examples/Generics.poy"
-            ],
-            "outFiles": [
-                "${workspaceFolder}/**/*.js"
-            ]
+            "args": ["${workspaceFolder}/examples/Generics.poy"],
+            "outFiles": ["${workspaceFolder}/**/*.js"]
         }
     ]
 }
