--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,7 @@
         "strict": true,
         "esModuleInterop": true,
         "moduleResolution": "node",
-        "noEmit": true,
+        "noEmit": true
     },
-    "exclude": [
-        "node_modules"
-    ]
+    "exclude": ["node_modules"]
 }
