--- a/package.json
+++ b/package.json
@@ -17,11 +17,9 @@
     },
     "devDependencies": {
         "@types/node": "^18.15.11",
-        "@types/uuid": "9.0.1",
         "esbuild": "^0.17.14",
         "itsamatch": "^1.2.0",
         "prettier": "3.1.1",
-        "typescript": "^5.3.3",
-        "uuid": "^9.0.0"
+        "typescript": "^5.3.3"
     }
 }
