--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "esbuild src/main.ts --bundle --outfile=build/poy.js --platform=node",
     "watch": "esbuild src/main.ts --bundle --outfile=build/poy.js --platform=node --sourcemap --watch",
-    "prettier": "prettier --write \"src/**/*.ts\""
+    "prettier": "prettier --write \"src/**/*.ts\"",
+    "lint": "oxlint"
   },
   "author": "Nathan Soufflet",
   "license": "MIT",
@@ -20,6 +21,7 @@
     "esbuild": "^0.19.11",
     "itsamatch": "^1.3.0",
     "prettier": "3.1.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "oxlint": "^0.2.8"
   }
 }
