--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "poy",
   "version": "1.0.0",
   "description": "",
+  "author": "Nathan Soufflet",
+  "license": "MIT",
   "main": "build/poy.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "esbuild src/main.ts --bundle --outfile=build/poy.js --platform=node",
-    "watch": "esbuild src/main.ts --bundle --outfile=build/poy.js --platform=node --sourcemap --watch",
+    "build": "esbuild src/main.ts --bundle --outfile=build/poy.js --platform=node && node scripts/shebang.js",
+    "watch": "esbuild src/main.ts --bundle --outfile=build/poy.js --platform=node --watch",
     "prettier": "prettier --write \"src/**/*.ts\"",
     "lint": "oxlint"
   },
-  "author": "Nathan Soufflet",
-  "license": "MIT",
+  "bin": {
+    "poy": "build/poy.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/nathsou/poy"
@@ -20,8 +23,8 @@
     "@types/node": "^18.15.11",
     "esbuild": "^0.19.11",
     "itsamatch": "^1.3.0",
+    "oxlint": "^0.2.8",
     "prettier": "3.1.1",
-    "typescript": "^5.3.3",
-    "oxlint": "^0.2.8"
+    "typescript": "^5.3.3"
   }
 }
