--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "url": "https://github.com/nathsou/poy"
   },
   "devDependencies": {
-    "@types/node": "^18.15.11",
-    "esbuild": "^0.23.1",
+    "@types/node": "^22.13.10",
+    "esbuild": "^0.25.1",
     "itsamatch": "^1.3.0",
-    "oxlint": "^0.9.1",
-    "prettier": "3.1.1",
-    "typescript": "^5.5.4"
+    "oxlint": "^0.15.14",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.2"
   }
 }
